--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,6 @@ user.props
 # Generated rst files
 ######################
 genrst/
-
-# MacOS desktop metadata files
-######################
-.DS_Store
+docs/_build
+.vscode
+esp-idf
